--- a/17_JS_Change_Events_Select_Box/style.css
+++ b/17_JS_Change_Events_Select_Box/style.css
@@ -1,3 +1,14 @@
 body {
   margin: 0;
 }
+
+.navbar {
+  background-color: darkslategray;
+  padding: 20px;
+}
+
+.navbar-brand {
+  text-decoration: none;
+  color: white;
+  font-family: Arial, Helvetica, sans-serif;
+}
