--- a/17_JS_Change_Events_Select_Box/style.css
+++ b/17_JS_Change_Events_Select_Box/style.css
@@ -12,3 +12,9 @@ body {
   color: white;
   font-family: Arial, Helvetica, sans-serif;
 }
+
+.form-control {
+  padding: 10px;
+  background-color: antiquewhite;
+  border-radius: 4px;
+}
