--- a/19_JS_Range_Select/style.css
+++ b/19_JS_Range_Select/style.css
@@ -6,3 +6,13 @@ body {
   background-color: darkslategray;
   padding: 30px;
 }
+
+.navbar-brand {
+  text-decoration: none;
+  color: white;
+  font-family: Arial, Helvetica, sans-serif;
+}
+
+.card-header {
+  background: linear-gradient(25deg, black, purple);
+}
