--- a/20_JS_SMS_App/style.css
+++ b/20_JS_SMS_App/style.css
@@ -1,17 +1,17 @@
-/* body{
-    margin: 0;
+body {
+  margin: 0;
 }
 .navbar {
-    background-color: darkslategray;
-    padding: 20px;
+  background-color: darkslategray;
+  padding: 20px;
 }
 
-.navbar-brand{
-    text-decoration: none;
-    color: white;
-    font-family: Arial, Helvetica, sans-serif;
-} */
+.navbar-brand {
+  text-decoration: none;
+  color: white;
+  font-family: Arial, Helvetica, sans-serif;
+}
 
 .card-header {
-    background: linear-gradient(25deg, black, purple);
+  background: linear-gradient(25deg, black, purple);
 }
