--- a/22_JS_Math_Table/style.css
+++ b/22_JS_Math_Table/style.css
@@ -11,3 +11,11 @@ body {
   color: white;
   font-family: Arial, Helvetica, sans-serif;
 }
+
+.badge-secondary {
+  background: linear-gradient(45deg, black, purple);
+}
+
+.text-secondary {
+  color: #4d004d !important;
+}
