--- a/24_JS_Form_Validation/style.css
+++ b/24_JS_Form_Validation/style.css
@@ -11,3 +11,21 @@ body {
   color: white;
   font-family: Arial, Helvetica, sans-serif;
 }
+
+.card-body {
+  background-color: #f8dcf8;
+}
+
+.is-form-valid {
+  border: 1px solid green;
+  border-left: 15px solid green;
+  box-shadow: 0 0 10px black;
+  border-radius: 5px;
+}
+
+.is-form-invalid {
+  border: 1px solid orangered;
+  border-left: 15px solid orangered;
+  box-shadow: 0 0 10px orangered;
+  border-radius: 5px;
+}
