--- a/26_JS_Image_Upload/style.css
+++ b/26_JS_Image_Upload/style.css
@@ -5,3 +5,13 @@ body {
   background-color: darkslategray;
   padding: 20px;
 }
+
+.navbar-brand {
+  text-decoration: none;
+  color: white;
+  font-family: Arial, Helvetica, sans-serif;
+}
+
+.img-card {
+  box-shadow: 0 0 5px black;
+}
